# adaptive-sensitivity

./: .gitignore  LICENSE  README.md  run_exps.bash
Docker/: Dockerfile  create_xauth.py  deploy.py
docs/: index.html
src/airskin-pain/: CMakeLists.txt  README.md  package.xml  setup.py
src/airskin-pain/launch/: main.launch
src/airskin-pain/src/airskin_pain/: airskin_feedback.py  do_exps.py  eff_mass.py  kuka_feedback.py  main_velocity.py  utils.py
src/kuka_simulator/barrett_hand/: CMakeLists.txt  package.xml
src/kuka_simulator/bullet_ros_kuka/: CMakeLists.txt  package.xml  setup.py
src/kuka_simulator/bullet_ros_kuka/config/: iiwa_controllers.yaml
src/kuka_simulator/bullet_ros_kuka/launch/: simulation.launch
src/kuka_simulator/bullet_ros_kuka/msg/: Collisions.msg
src/kuka_simulator/bullet_ros_kuka/scripts/: examples.py  tester.py
src/kuka_simulator/bullet_ros_kuka/src/: bullet_ros_kuka.cpp  robot.cpp
src/kuka_simulator/bullet_ros_kuka/srv/: grip.srv
src/kuka_simulator/bullet_ros_kuka/urdf/: kuka.urdf  kuka_bhand.urdf  kuka_bhand_vhacd.urdf  kuka_vhacd.urdf
src/kuka_simulator/iiwa_bhand_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/kuka_simulator/pyKUKA/: CMakeLists.txt  package.xml  setup.py
src/orocos_kinematics_dynamics/python_orocos_kdl/: CMakeLists.txt
src/ur10e_simulator/: README.md
src/ur10e_simulator/UR10e_meshes/: CMakeLists.txt  package.xml  ur10e.urdf  ur10e_vhacd.urdf
src/ur10e_simulator/bullet_ros_ur/: CMakeLists.txt  package.xml  setup.py
src/ur10e_simulator/pyUR/: CMakeLists.txt  package.xml  setup.py
(+82 files in other folders)
